# picoCPU

./: .gitignore  CMakeLists.txt  README.md  build.bat  guide.txt  run_gates.sh  run_pe_gates.sh
cmake/: flags.cmake
math_test/: README.md  build.bat  math_target.cpp
src/emu/: CMakeLists.txt  error.cpp  float80.cpp  iat_stubs.cpp
src/emu/cache/: block_cache.cpp
src/emu/cpu/: cpu.cpp  fault.cpp  flags.cpp
src/emu/decoder/: decoder.cpp  decoder_internal.h  decoder_opcodes.cpp  modrm.cpp
src/emu/dispatcher/: dispatcher.cpp
src/emu/handlers/: arithmetic.cpp  avx.cpp  avx512.cpp  bit_manip.cpp  bmi.cpp  control_flow.cpp  data_mov.cpp  gather.cpp  handler_util.h  handlers.h  logical.cpp  misc.cpp  phase10.cpp  shift_rotate.cpp  sse.cpp  sse4_aes.cpp  sse_fp.cpp  string_ops.cpp  syscalls.cpp  x87.cpp
src/emu/include/emu/: block_cache.h  branch_target_cache.h  cache.h  cpu.h  decoder.h  emu.h  error.h  fault.h  float80.h  heap.h  hooks.h  iat_stubs.h  ir.h  logger.h  memory.h  peephole.h  seh.h  shadow_pages.h  stub_heap.h  syscalls.h  types.h
src/emu/ir/: insn.cpp  peephole.cpp
src/emu/logger/: logger.cpp
src/emu/memory/: heap.cpp  l1_cache.cpp  l2_cache.cpp  l3_cache.cpp  provider.cpp  shadow_pages.cpp
src/host/: CMakeLists.txt  pe_image.cpp  pe_image.h  pe_loader.cpp  pe_loader.h  seh.cpp  win_process.cpp  win_process.h  win_tls.cpp  win_tls.h
src/tester/: CMakeLists.txt  tester.cpp
tests/: CMakeLists.txt
tests/unit/: test_decoder.cpp  test_emu_e2e.cpp  test_flags_crosscheck.cpp  test_framework.h  test_fuzz.cpp  test_handlers.cpp  test_main.cpp  test_phase10.cpp  test_phase12.cpp  test_phase13.cpp  test_phase9.cpp
